# takeoff

./: .editorconfig  .env  .kdev_include_paths  CMakeLists.txt  ColorSwatch.cpp  ColorSwatch.hpp  MainWindow.cpp  MainWindow.hpp  NaturalSort.hpp  Page.cpp  Page.hpp  README.md  Scale.hpp  Shape.cpp  Shape.hpp  Viewer.cpp  Viewer.hpp  main.cpp  main.js  package.json
assets/: style.css  takeoff-font.css  toolbar.css
assets/fonts/: selection.json  takeoff.eot
lib/: dommit.js
resources/mac/: Info.plist  launch.sh  project.icns
shapes/: Area.cpp  Area.hpp  Check.cpp  Check.hpp  Count.cpp  Count.hpp  Line.cpp  Line.hpp
src/: index.js  workspace.js
src/models/: Project.js
src/shapes/: Area.js  Count.js  Line.js  Shape.js  ShapeFactory.js
src/tmpl/: workspace.html
src/tools/: Area.js  Pointer.js  Tool.js  ZoomIn.js  ZoomOut.js  ZoomWindow.js
support/: project.tdf
test/: test_area_shape.cpp
tests/: area.js
ui/: MainWindow.ui
ui/icons/: icons.qrc
ui/icons/mac/: app.icns
views/: index.html  workspace.html
